fix(style): Fix logos and sign up / login spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,10 +4,16 @@
     --textSecondaryColor: #b8baee;
     --primaryBackground: #252448;
     --textTopicColor: #18faff;
+    --linkHoverColor: pink;
+    --linkActiveColor: purple;
 }
 
 html {
     font: normal 16px sans-serif;
+    font-style: normal;
+    font-stretch: normal;
+    line-height: normal;
+    letter-spacing: normal;
     color: var(--textPrimaryColor);
     background: black;
 }
@@ -29,24 +35,22 @@ h4.logo {
 }
 
 h3.normal {
+    font-weight: bold;
     color: var(--textPrimaryColor);
 }
 
 h3.topic {
     color: var(--textTopicColor);
-    /*font-family: WorkSans;*/
     font-size: 39px;
     font-weight: 600;
     font-style: normal;
     font-stretch: normal;
-    line-height: 1.18;
+    line-height: 1.28;
     letter-spacing: normal;
     padding-bottom: 35px;
 }
 
-p.textDescription 
-{
-   /* font-family: WorkSans;*/
+p.textDescription {
     font-size: 18px;
     font-weight: normal;
     font-style: normal;
@@ -61,11 +65,6 @@ p.textDescription
     color: var(--textTopicColor);
 }
 
-img.imageSize {
-    display: block;
-    height: 322px;
-}
-
 div.imageBlock {
     padding-top: 100%;
     padding-bottom: 25px;
@@ -73,54 +72,20 @@ div.imageBlock {
     border-radius: 100%;
 }
 
-.smallerSize {
-    display: block;
-    background-size: 15px 10px;
-}
-
-.vAlign {
-    height: 100%;
-}
-
-.smallerSize {
-    background-size: 15px 12px;
-}
-
-div.spacing {
-    padding-top: 20px;
-    padding-bottom: 0px;
-}
-
-div.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: auto;
-    margin-bottom: 30px;
-}
-
-div.nacCenter {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 15px;
-    margin-bottom: 30px;
-}
-
-.login {
-    color: #18faff;
-}
-
-.loginPadding {
-    padding-top: 15px;
-    padding-left: 40px;
-}
-
-
 a {
-    text-decoration: none;
     color: var(--textActiveColor);
     cursor: pointer;
+    transition: 0.2s all ease;
+}
+
+a:hover {
+    text-decoration: none;
+    color: var(--linkHoverColor);
+}
+
+a:active {
+    text-decoration: none;
+    color: var(--linkActiveColor);
 }
 
 .symbolLine
@@ -141,14 +106,11 @@ svg.lowerPadding {
 
 a > span.logoText {
     color: var(--textPrimaryColor);
+    font-weight: bold;
 }
 
 a>span.logoText.highlight {
     color: var(--textActiveColor);
-}
-
-a:hover {
-    opacity: 1;
 }
 
 a.btn {
@@ -174,6 +136,13 @@ a.btn-primary {
     padding-bottom: 20px;
 }
 
+div.signup-buttons {
+    text-align: center;
+}
+
+div.signup-buttons > a {
+    display: inline-block;
+}
 
 a.btn-signup {
     background-color: #0911a3;
@@ -181,6 +150,24 @@ a.btn-signup {
     padding-bottom: 20px;
     border-color: #007bff;
     width: 100px;
+}
+
+a.btn-signup:hover {
+    background-color: #007bff;
+}
+
+a.btn-login {
+    box-shadow: none;
+    width: 100px;
+    color: #18faff
+}
+
+a.btn-login:hover {
+    color: var(--linkHoverColor);
+}
+
+a.btn-login:active {
+    color: var(--linkActiveColor);
 }
 
 a.btn-secondary {
@@ -202,18 +189,24 @@ section.main {
 
 section.secondary {
     background: black;
-    padding-bottom: 150px;
+    padding-bottom: 80px;
 }
 
 
 .detail-section>div {
     padding: 30px;
-    margin: 30px;
 }
 
 .link-section>div {
-    padding: 30px;
-    margin: 30px;
+    padding: 15px;
+}
+
+.data-section>div {
+    padding: 15px;
+}
+
+svg.icon-download-data {
+    padding-left: 25px;
 }
 
 .acknowledgements {
@@ -223,7 +216,6 @@ section.secondary {
 
 .acknowledgements>div {
     padding: 30px;
-    margin: 30px;
     text-align: center;
 }
 
@@ -286,12 +278,17 @@ use.path {
 }
 
 .logo-img {
-    display: block;
-    margin: 1.07143rem auto;
+    margin: 0 auto;
     cursor: pointer;
-    width: 265px;
-    height: 30px;
     text-decoration: none;
+    display: block;
+    align-items: center;
+    justify-content: center;
+}
+
+.logo-img > img {
+    max-width: 265px;
+    min-height: 30px;
 }
 
 .logo-img.lowerPadding {
